# pan-os-python

./: .bandit  .editorconfig  .flake8  .flake8.ini  .gitignore  .isort.cfg  .readthedocs.yaml  .releaserc.json  .travis.yml  AGENTS.md  CHANGES  CONTRIBUTING.rst  Gruntfile.js  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README.txt  index.html  license-eula.rtf  mypy.ini  pyproject.toml  q  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: set-version.sh
.github/workflows/: ci.yml
README/: inputs.conf.spec
appserver/controllers/: get_version.py  nfi_nav_handler.py
appserver/static/: IndexHealthText.html  IndexingStatusIntroText1.html  ammap.html  application.css  autorefrsh.html  dashboard.css  default.css  export_button.html  faq.html  nfi_about.html  pan_overview.css  realtime_ammap.html  threat_map.html  threat_overview.css  traffic_overview.css  web_activity.css
appserver/static/ammap/: ammap.swf  ammap_settings.xml  export.aspx.cs  export.php  realtime_ammap_settings.xml
appserver/static/ammap/icons/: anchor.swf  arrow.swf  bed.swf  bike.swf  bubble.swf  bus.swf  camera.swf  car.swf  castle.swf  coffee.swf  cross.swf  dollar.swf  end.swf  flag.swf  hiker.swf  hospital.swf  info.swf  interest.swf  mountains.swf  museum.swf  palm.swf  phone.swf  pin.swf  plane.swf  rest.swf  restaurant.swf  skier.swf  skyscraper.swf  start.swf  sun.swf  tent.swf  train.swf  water.swf  wc.swf  yacht.swf  zoom_out.swf
appserver/static/ammap/maps/: australia.swf  austria.swf  belgium.swf  canada.swf  china.swf  continents.swf  denmark.swf  france.swf  germany.swf  italy.swf  japan.swf  mexico.swf  new_zealand.swf  nicaragua.swf  northamerica.swf  russia.swf  spain.swf  switzerland.swf  united_kingdom.swf  united_kingdom_regions.swf  usa.swf  usa_mercator.swf  venezuela.swf  world.swf  world_with_antarctica.swf
appserver/static/xml_out/: realtime_threat_data.xml  rt_threat_data.xml
css/: custom.css  custom.scss
default/: addon_builder.conf  app.conf  commands.conf  datamodels.conf  eventgen.conf  eventtypes.conf  indexes.conf  inputs.conf  limits.conf  macros.conf  nfi_pages.conf  nfi_version.conf  props.conf  restmap.conf  savedsearches.conf  searchbnf.conf  setup.xml  tags.conf  transforms.conf  web.conf  workflow_actions.conf
default/data/models/: pan_endpoint.json  pan_firewall.json  pan_logs.json  pan_wildfire_report.json
default/data/ui/html/: external_search.html
default/data/ui/nav/: default.xml  default.xml.enabled  default.xml.nfi_disabled  default.xml.nfi_enabled
default/data/ui/panels/: pan_fw_app_activity_destinations_in_last_24h.xml
default/data/ui/views/: about.xml  ammap_view.xml  config_overview.xml  content_overview.xml  data_filtering.xml  data_filtering_overview.xml  endpoint_operations.xml  endpoint_overview.xml  endpoint_security.xml  faq.xml  globalprotect_overview.xml  nfi_about.xml  nfi_overview.xml  nfi_search_apps.xml  nfi_search_apps_users.xml  nfi_search_connectors.xml  nfi_search_consumers.xml  nfi_search_destinations.xml  (+22 more)
doc/: pan.xapi.rst  panwfapi.rst
docs/: Makefile  advanced.rst  commands.rst  conf.py  configtree.dot  configtree.py  configtree.rst  examples.rst  faq.rst  getting-started.rst  getting_started.rst  howto.rst  index.rst  installation.rst  module-base.rst  module-device.rst  module-errors.rst  module-firewall.rst  module-ha.rst  module-network.rst  module-objects.rst  module-panorama.rst  module-plugins.rst  module-policies.rst  module-predefined.rst  module-updater.rst  module-userid.rst  moduleref.py  overview.rst  pandevice.rst  readme.rst  reference.rst  release_notes.rst  requirements.txt  support.rst  trial_demo.rst  troubleshoot.rst  universal_forwarder.rst  upgrade.rst  usage.rst  (+2 more)
examples/: README.md  README.rst  __init__.py  bulk_address_objects.py  bulk_subinterfaces.py  configure_rip_profile.py  dyn_address_group.py  ensure_security_rule.py  log_forwarding_profile.py  prisma_access.py  prisma_access_create_remote_network.py  prisma_access_list_RN_regions_bw.py  prisma_access_show_jobs_status.py  prisma_access_show_remote_net_per_tenant.py  upgrade.py  userid.py
install/Splunk_TA_paloalto/: .gitignore  CHANGES.txt  README.md  README.txt  license-eula.txt
install/Splunk_TA_paloalto/README/: README.md  alert_actions.conf.spec
install/Splunk_TA_paloalto/default/: alert_actions.conf  app.conf  collections.conf  eventgen.conf  eventtypes.conf  props.conf  setup.xml  tags.conf  transforms.conf  web.conf  workflow_actions.conf
install/Splunk_TA_paloalto/lookups/: app_list.csv  endpoint_epm.csv  endpoint_severity.csv  ip_classifications.csv  pan_vendor_actions.csv  sanctioned_saas.csv  threat_list.csv
install/Splunk_TA_paloalto/samples/: pan_globalprotect.samplelog  pan_incident_data_config.samplelog  pan_wildfire_reports.csv
lib/pan/: __init__.py  wfapi.py  xapi.py
lib/pan/afapi/: __init__.py
local/: inputs.conf.sample
lookups/: app_list.csv  endpoint_log_subtypes.csv  endpoint_severity.csv  pan_vendor_info.csv  sanctioned_saas.csv  services.csv  threat_list.csv
pandevice/: __init__.py  base.py  device.py  errors.py  firewall.py  globalprotect.py  ha.py  interface.py  network.py  object.py  objects.py  panorama.py  paths.py  policies.py  predefined.py  updater.py  userid.py
panos/: __init__.py  _xml_safety.py  base.py  device.py  firewall.py  ha.py  network.py  objects.py  panorama.py  plugins.py  policies.py  predefined.py  prisma_access.py  updater.py  userid.py
samples/: pan_endpoint.samplelog
tests/: __init__.py  credentials.py  expect.py  test_PanOScomp.py  test_base.py  test_classic_objects.py  test_device_profile_xpaths.py  test_firewall.py  test_init.py  test_integration.py  test_my_init.py  test_opstate.py  test_pandevice.py  test_panorama.py  test_params.py  test_predefined.py  test_standards.py  test_updater.py  test_userid.py  test_versioning.py  test_vsys_xpaths.py  test_xml_safety.py
tests/live/: conftest.py  test_device_config.py  test_network.py  test_objects.py  test_set_reference.py  test_userid.py  testlib.py
(+6 files in other folders)
