[tool.poetry]
name = "pan-os-python"
version = "1.11.0"
description = "Framework for interacting with Palo Alto Networks devices via API"
authors = ["Palo Alto Networks <devrel@paloaltonetworks.com>"]
license = "ISC"
keywords = ["panos", "pan-os-python"]
readme = "README.md"
homepage = "https://github.com/PaloAltoNetworks/pan-os-python"
repository = "https://github.com/PaloAltoNetworks/pan-os-python"
documentation = "https://pan-os-python.readthedocs.io"
packages = [
    { include = "panos" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
pan-python = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^5.3.2", python = "^3.5"}
black = {version = "^23.12.1", python = "^3.8"}
flake8-eradicate = {version = "^1.5.0", python = "^3.8.1"}
flake8-bugbear = {version = "^24.1.17", python = "^3.8.1"}
flake8 = {version = "^7.0.0", python = "^3.8.1"}
flake8-logging-format = {version = "^0.9.0", python = "^3.8.1"}
flake8-pep3101 = {version = "^2.1.0", python = "^3.8.1"}
flake8-builtins = {version = "^2.2.0", python = "^3.8.1"}
flake8-comprehensions = {version = "^3.14.0", python = "^3.8.1"}
flake8-string-format = {version = "^0.3.0", python = "^3.8.1"}
flake8-mutable = {version = "^1.2.0", python = "^3.8.1"}
flake8-pytest = {version = "^1.4", python = "^3.8.1"}
flake8-mock = {version = "^0.4", python = "^3.8.1"}
flake8-docstrings = {version = "^1.7.0", python = "^3.8.1"}
flake8-variables-names = {version = "^0.0.6", python = "^3.8.1"}
pep8-naming = {version = "^0.13.3", python = "^3.7"}
poetry2setup = {version = "^1.1.0", python = ">=3.6"}
fissix = {version = "^19.2b1", python = "^3.6"}
sphinx = {version = "^2.3.1", python = "^3.5"}
pytest-cov = {version = "^2.8.1", python = "^3.5"}
sphinx_rtd_theme = {version = "^0.4.3", python = "^3.5"}
sphinx-autobuild = {version = "^0.7.1", python = "^3.5"}
bandit = {version = "^1.7.6", python = "^3.8"}
isort = {version = "^5.13.2", python = "^3.8"}
m2r = "^0.2.1"
mypy = {version = "^1.8.0", python = "^3.8"}
packaging = {version = "^23.2", python = "^3.7"}
docutils = {version = "^0.20.1", python = "^3.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
